--- a/phala-cloud/networking/enable-ssh-access.mdx
+++ b/phala-cloud/networking/enable-ssh-access.mdx
@@ -4,7 +4,7 @@ description: Connect to your CVM via SSH for debugging and management
 ---
 
 <Warning>
-SSH access is only available when you deploy with a **Development OS** image. Select "Development" as the OS type when creating your CVM. Production OS images have SSH disabled for security.
+SSH access is only available when you deploy with a **dev** OS image. Select "dstack-dev" as the OS type when creating your CVM. Production OS images have SSH disabled for security.
 </Warning>
 
 This guide shows you how to SSH into your CVM through the secure gateway tunnel.
@@ -97,5 +97,5 @@ wg show
 ## Next Steps
 
 - [Monitor logs](/phala-cloud/monitoring/public-logs)
-- [Set up custom domains](/phala-cloud/networking/how-to/setup-custom-domain)
+- [Set up custom domains](setup-custom-domain)
 - [Learn about security](/phala-cloud/networking/security)
