--- a/phala-cloud/networking/expose-http-service.mdx
+++ b/phala-cloud/networking/expose-http-service.mdx
@@ -150,6 +150,6 @@ This means your application handles sensitive data with true confidentiality - c
 
 ## Next Steps
 
-- [Set up a custom domain](/phala-cloud/networking/how-to/setup-custom-domain)
-- [Add gRPC support](/phala-cloud/networking/how-to/setup-grpc-service)
+- [Set up a custom domain](setup-custom-domain)
+- [Add gRPC support](setup-grpc-service)
 - [Learn about security features](/phala-cloud/networking/security)
