--- a/phala-cloud/networking/quickstart.mdx
+++ b/phala-cloud/networking/quickstart.mdx
@@ -44,7 +44,7 @@ Your nginx container is now:
 
 ## Next Steps
 
-- [Expose multiple ports](/phala-cloud/networking/how-to/expose-http-service)
-- [Set up a custom domain](/phala-cloud/networking/how-to/setup-custom-domain)
-- [Connect a database](/phala-cloud/networking/how-to/expose-tcp-service)
+- [Expose multiple ports](expose-http-service)
+- [Set up a custom domain](setup-custom-domain)
+- [Connect a database](expose-tcp-service)
 - [Understand the security model](/phala-cloud/networking/security)
