--- a/phala-cloud/networking/specifications.mdx
+++ b/phala-cloud/networking/specifications.mdx
@@ -7,23 +7,32 @@ description: Quick lookup for URL patterns, environment variables, and configura
 
 | Pattern | Protocol | Example |
 |---------|----------|---------|
+| `{app-id}.{cluster}.phala.network` | HTTP/HTTPS to port 80 (default) | `abc123.us.phala.network` |
 | `{app-id}-{port}.{cluster}.phala.network` | HTTP/HTTPS (TLS termination) | `abc123-8080.us.phala.network` |
 | `{app-id}-{port}g.{cluster}.phala.network` | gRPC/HTTP2 | `abc123-50051g.us.phala.network` |
+| `{app-id}s.{cluster}.phala.network` | TLS passthrough to port 443 (default) | `abc123s.us.phala.network` |
 | `{app-id}-{port}s.{cluster}.phala.network` | TLS passthrough | `abc123-5432s.us.phala.network` |
 | `{app-id}-22.{cluster}.phala.network` | SSH tunnel | `abc123-22.us.phala.network` |
 
-- All external connections use port 443
+**Default Port Behaviors:**
+- No port specified = routes to port 80 for HTTP or port 443 for TLS passthrough
+- All external connections use port 443 regardless of internal port
 - `{app-id}` is auto-generated on deployment
 - `{port}` matches your container's exposed port
 - `{cluster}` is regional (us, eu, asia)
 
-## Environment Variables
+## Auto-populated Environment Variables
 
-### Auto-populated
+You can use these variables in your docker-compose file:
+
 | Variable | Value | Example |
 |----------|-------|---------|
 | `DSTACK_APP_ID` | Application identifier | `abc123def456` |
 | `DSTACK_GATEWAY_DOMAIN` | Regional domain | `us.phala.network` |
+
+## Environment Variables
+
+The variables you can change to config networking features.
 
 ### SSH Access
 | Variable | Type | Purpose |
@@ -50,13 +59,13 @@ description: Quick lookup for URL patterns, environment variables, and configura
 
 ## Protocol Support
 
-| Protocol | Default Mode | Passthrough Mode |
-|----------|--------------|------------------|
-| HTTP/1.1 | ✅ | ✅ |
-| HTTP/2 | ✅ (with `g` suffix) | ✅ |
-| WebSocket | ✅ | ✅ |
-| TCP+TLS | ❌ | ✅ (with `s` suffix) |
-| UDP | ❌ | ❌ |
+| Protocol | Default Mode | TLS Passthrough Mode | Egress Traffic |
+|----------|--------------|----------------------|----------------|
+| HTTP/1.1 | ✅ | ✅ | ✅ |
+| HTTP/2 | ✅ (with `g` suffix) | ✅ | ✅ |
+| WebSocket | ✅ | ✅ | ✅ |
+| TCP | ❌ | ✅ (with `s` suffix) | ✅ |
+| UDP | ⚠️  (NAT travesal) | N/A | ✅ |
 
 ## Docker Images
 
@@ -80,12 +89,3 @@ description: Quick lookup for URL patterns, environment variables, and configura
 | Duplicate certificates | 5/week |
 | Failed validations | 5/hour per hostname |
 
-## SSH Configuration
-
-| Setting | Value |
-|---------|-------|
-| Connection method | TCP over TLS via gateway |
-| External port | 443 |
-| SSH config | `ProxyCommand openssl s_client -quiet -connect %h:%p` |
-| User | `root` |
-| Availability | Development images only |
