--- a/phala-cloud/confidential-ai/confidential-model/confidential-ai-api.mdx
+++ b/phala-cloud/confidential-ai/confidential-model/confidential-ai-api.mdx
@@ -46,14 +46,14 @@ print(response.choices[0].message.content)
 ```typescript TypeScript
 import OpenAI from 'openai';
 
-const openai = new OpenAI({
+const client = new OpenAI({
     baseURL: 'https://api.redpill.ai/api/v1',
     apiKey: '<API_KEY>',
   },
 });
 
 async function main() {
-  const completion = await openai.chat.completions.create({
+  const completion = await client.chat.completions.create({
     model: 'phala/deepseek-chat-v3-0324',
     messages: [
       {
