fix exchange links

--- a/network/references/basic-guidance/get-pha-and-transfer.mdx
+++ b/network/references/basic-guidance/get-pha-and-transfer.mdx
@@ -19,21 +19,21 @@ If you do not hold any PHA, you can purchase PHA from any of the following excha
   
   <Card title="Kraken" icon="external-link">
     <img src="/images/kraken.jpeg" alt="Kraken" style={{ width: '60px', height: 'auto', marginBottom: '10px' }} />
-    <a href="https://www.kraken.com/prices/pha-phala-price-chart/eur-euro?interval=1m" target="_blank" rel="noopener noreferrer">
+    <a href="https://www.kraken.com/prices/phala.network" target="_blank" rel="noopener noreferrer">
       Trade PHA on Kraken →
     </a>
   </Card>
   
   <Card title="OKEX" icon="external-link">
-    <img src="/images/3-OKEx.png" alt="OKEX" style={{ width: '60px', height: 'auto', marginBottom: '10px' }} />
-    <a href="https://www.okex.com/trade-spot/pha-usdt" target="_blank" rel="noopener noreferrer">
-      Trade PHA on OKEX →
+    <img src="/images/3-OKEx.png" alt="OKX" style={{ width: '60px', height: 'auto', marginBottom: '10px' }} />
+    <a href="https://www.okx.com/trade-spot/pha-usdt" target="_blank" rel="noopener noreferrer">
+      Trade PHA on OKX →
     </a>
   </Card>
   
-  <Card title="Huobi" icon="external-link">
+  <Card title="HTX" icon="external-link">
     <img src="/images/2-Huobi.png" alt="Huobi" style={{ width: '60px', height: 'auto', marginBottom: '10px' }} />
-    <a href="https://www.huobi.com/en-us/exchange/pha_usdt" target="_blank" rel="noopener noreferrer">
+    <a href="https://www.htx.com/price/pha/" target="_blank" rel="noopener noreferrer">
       Trade PHA on Huobi →
     </a>
   </Card>
