fix networking cross reference links

--- a/phala-cloud/networking/domain-attestation.mdx
+++ b/phala-cloud/networking/domain-attestation.mdx
@@ -7,7 +7,7 @@ description: How to verify your data privacy when connecting to TEE applications
 
 Your TEE connection is end-to-end encrypted. Here's how to prove it yourself with simple commands that anyone can run.
 
-This guide covers network privacy verification. For application code verification, check your app's attestation docs. For security concepts, see [Security Model](/phala-cloud/networking/security#certificate-and-domain-security).
+This guide covers network privacy verification. For application code verification, check your app's attestation docs. For security concepts, see [Network Security Architecture](/phala-cloud/networking/security).
 
 ## Choose Your Verification Path
 
