--- a/phala-cloud/networking/enable-ssh-access.mdx
+++ b/phala-cloud/networking/enable-ssh-access.mdx
@@ -97,5 +97,5 @@ wg show
 ## Next Steps
 
 - [Monitor logs](/phala-cloud/monitoring/public-logs)
-- [Set up custom domains](setup-custom-domain)
+- [Set up custom domains](/phala-cloud/networking/setup-custom-domain)
 - [Learn about security](/phala-cloud/networking/security)
