--- a/phala-cloud/networking/expose-tcp-service.mdx
+++ b/phala-cloud/networking/expose-tcp-service.mdx
@@ -131,6 +131,6 @@ External clients use TLS, internal services use plain connections for better per
 
 ## Next Steps
 
-- [Set up gRPC services](setup-grpc-service)
-- [Enable TLS passthrough](tls-passthrough) for end-to-end encryption
-- [Configure custom domains](setup-custom-domain)
+- [Set up gRPC services](/phala-cloud/networking/setup-grpc-service)
+- [Enable TLS passthrough](/phala-cloud/networking/tls-passthrough) for end-to-end encryption
+- [Configure custom domains](/phala-cloud/networking/setup-custom-domain)
