--- a/phala-cloud/networking/quickstart.mdx
+++ b/phala-cloud/networking/quickstart.mdx
@@ -45,6 +45,6 @@ Your nginx container is now:
 ## Next Steps
 
 - [Expose multiple ports](expose-http-service)
-- [Set up a custom domain](setup-custom-domain)
-- [Connect a database](expose-tcp-service)
+- [Set up a custom domain](/phala-cloud/networking/setup-custom-domain)
+- [Connect a database](/phala-cloud/networking/expose-tcp-service)
 - [Understand the security model](/phala-cloud/networking/security)
