--- a/phala-cloud/networking/setup-custom-domain.mdx
+++ b/phala-cloud/networking/setup-custom-domain.mdx
@@ -206,6 +206,6 @@ You may forget to attached the data volume.
 
 ## Next Steps
 
-- [Expose TCP services](expose-tcp-service)
-- [Learn about domain attestation](/phala-cloud/networking/security)
-- [Set up gRPC with custom domain](setup-grpc-service)
+- [Expose TCP services](/phala-cloud/networking/expose-tcp-service)
+- [Learn about domain attestation](/phala-cloud/networking/domain-attestation)
+- [Set up gRPC with custom domain](/phala-cloud/networking/setup-grpc-service)
