--- a/phala-cloud/networking/setup-grpc-service.mdx
+++ b/phala-cloud/networking/setup-grpc-service.mdx
@@ -90,7 +90,7 @@ volumes:
   cert-data:
 ```
 
-Then connect to: `api.mycompany.com`. Learn more details at [Set up custom domains](setup-custom-domain).
+Then connect to: `api.mycompany.com`. Learn more details at [Set up custom domains](/phala-cloud/networking/setup-custom-domain).
 
 ## Testing with grpcurl
 
@@ -139,6 +139,6 @@ services:
 
 ## Next Steps
 
-- [Expose TCP services](expose-tcp-service)
-- [Set up custom domains](setup-custom-domain)
+- [Expose TCP services](/phala-cloud/networking/expose-tcp-service)
+- [Set up custom domains](/phala-cloud/networking/setup-custom-domain)
 - [Learn about security](/phala-cloud/networking/security)
