--- a/phala-cloud/networking/tls-passthrough.mdx
+++ b/phala-cloud/networking/tls-passthrough.mdx
@@ -131,5 +131,5 @@ services:
 ## Next Steps
 
 - [Learn about network security](/phala-cloud/networking/security)
-- [Set up custom domains](setup-custom-domain)
+- [Set up custom domains](/phala-cloud/networking/setup-custom-domain)
 - [Understand network architecture](/phala-cloud/networking/architecture)
